# guardbot

./: .env.example  .gitignore  CHANGELOG.md  README.md  bot.py  flake.nix  init_students.py  pyproject.toml  requirements.in  requirements.txt  setup.py  wsgi.py
app/: __init__.py  commands.py  init_students.py
